fix: replace List.getFirst() with List.get(0) for Java 17 compatibility